boost (1.35.0-1) UNRELEASED; urgency=low

  * New upstream version.  Closes: #473752.
    debian/documentation-files: 
    debian/patches: Adjust to new version.
  
  * debian/patches/library-naming.patch: New.  Remove toolset decoration
    from library names.
  
  * debian/rtupdate: Remove logic for links with toolset name.

  * debian/rules: Adjust SOVERSION, SHLIBS_VERSION, and boost_version to
    new version.  
    Add system to boost_libs.  
    Adjust link functions:
      - Create compatibility links with toolset and boost version, rather
        than simplified name links.
      - Don't create gcc41 compatibility links.
      - Don't create Boost.Python compatibility links.
    Add "link=shared,static" to all jam invocations, including "jam install".
    Don't need to copy more/css_0 to -doc package.  
    Add rules for new system library

  * debian/control: Substitute 1.34.1 --> 1.35.0 on all library package
    names.  Add packages libboost-system1.35.0 and libboost-system-dev.

  * debian/control:
  * debian/rules: Don't build with g++-4.2 explicitly.  Closes: #463288.
  
  * debian/libboost-doc.doc-base: Change Section from obsolete
    Apps/Programming to Programming/C++.  Replace leading spaces of
    Abstract continuation lines by a single space.  The latter means
    "display verbatim", which is not desired.
  
 -- Steve M. Robbins <smr@debian.org>  Sat, 19 Apr 2008 01:41:37 -0500

boost (1.34.1-11) unstable; urgency=low

  * debian/control: Add python-dev to libboost-python-dev depends.
    Closes: #473973.

 -- Steve M. Robbins <smr@debian.org>  Fri, 04 Apr 2008 11:01:05 -0500

boost (1.34.1-10) unstable; urgency=low

  * debian/libboost-python-dev.postinst:
  * debian/libboost-python-dbg.postinst: Change from "which pyversions &&
    ..." (which fails if pyversions not available) to "if which pyversions
    ...".  Closes: #473607.
  
  * debian/patches/date_time_date_formatting_hpp: Update patch to also