@@ -4,6 +4,8 @@
 
 set -e
 
+version=@@BOOST_VERSION@@
+
 die() {
     echo "$@" >&2
     exit 1
@@ -15,8 +17,8 @@ update_linklibs() {
 
     cd /usr/lib
     for thread in "" -mt; do
-	ln -s -f libboost_python${thread}${debug}-${py}.${suf} \
-	         libboost_python${thread}${debug}.${suf} 
+	ln -s -f libboost_python${thread}${debug}-${version}-${py}.${suf} \
+	         libboost_python${thread}${debug}-${version}.${suf} 
     done
 }
 
@@ -25,7 +27,7 @@ remove_linklibs() {
 
     cd /usr/lib
     for thread in "" -mt; do
-	rm -f libboost_python${thread}${debug}.${suf} 
+	rm -f libboost_python${thread}${debug}-${version}.${suf} 
     done
 }
 
